Bug 11456 - stabs related buffer bug
stabs related buffer bug
Status: RESOLVED FIXED
Product: binutils
Classification: Unclassified
Component: gas
2.21
: P2 normal
: ---
Assigned To: unassigned
:
Depends on:
Blocks:
  Show dependency treegraph
 
Reported: 2010-03-30 21:09 UTC by H.J. Lu
Modified: 2010-03-30 23:21 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
A testcase (10.36 KB, application/octet-stream)
2010-03-30 21:10 UTC, H.J. Lu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-03-30 21:09:08 UTC
assembler sometimes fails to process stabs
Comment 1 H.J. Lu 2010-03-30 21:10:00 UTC
Created attachment 4689 [details]
A testcase

[hjl@gnu-6 opcodes]$ gcc -c foo.s
foo.s: Assembler messages:
foo.s:105: Error: junk at end of line, first unrecognized character is `0'
foo.s:105: Error: junk at end of line, first unrecognized character is `"'
[hjl@gnu-6 opcodes]$
Comment 2 H.J. Lu 2010-03-30 22:19:44 UTC
It may not be an assembler bug.
Comment 3 cvs-commit@gcc.gnu.org 2010-03-30 23:20:41 UTC
Subject: Bug 11456

CVSROOT:	/cvs/src
Module name:	src
Changes by:	hjl@sourceware.org	2010-03-30 23:20:25

Modified files:
	gas            : ChangeLog input-scrub.c 

Log message:
	Use memmove to copy overlap memory.
	
	2010-03-30  H.J. Lu  <hongjiu.lu@intel.com>
	
	PR gas/11456
	* input-scrub.c (input_scrub_next_buffer): Use memmove instead
	of memcpy to copy overlap memory.

Patches:
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gas/ChangeLog.diff?cvsroot=src&r1=1.4122&r2=1.4123
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gas/input-scrub.c.diff?cvsroot=src&r1=1.22&r2=1.23

Comment 4 H.J. Lu 2010-03-30 23:21:53 UTC
Fixed.